--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
-    height: 98vh;
+    height: 97vh;
   }
   
   .container {
@@ -45,11 +45,15 @@ body {
   input {
     display: block;
     margin: auto;
+    width: 250px;
     padding: 5px;
+
+    text-align: center;
   }
   button {
     background-color: white;
     color: black;
+    width: 150px;
     padding: 5px;
   }
   button:hover {
@@ -59,6 +63,43 @@ body {
   h2 {
     color: white;
   }
+  
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
+}
+
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
   #saida {
     width: 50%;
     margin: auto;
