--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,9 @@ body {
     right: 10px;
   }
   
-  body > img {
-    margin: 0 10px;
-  }
-  
-  img {
+  #moedas{
+    display: block;
+    margin: auto;
     height: 30%;
   }
   input {
@@ -55,6 +53,7 @@ body {
     color: black;
     width: 150px;
     padding: 5px;
+    margin: 10px 5px;
   }
   button:hover {
     background-color: #dbdbdb;
