--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:300px) and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   #moedas{
     margin: 0px;
     width: 0px;
